Adds initial changes

--- a/docs/examples/basic-block-grid.ejs
+++ b/docs/examples/basic-block-grid.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"/>
   <style>
 
-{{> ink }}
+  <%- include ../../dist/wink.css %>
 
 
     /* Custom styles go here */
