--- a/docs/examples/full-width.ejs
+++ b/docs/examples/full-width.ejs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width"/>
   <style>
 
-    {{> ink }}
+  <%- include ../../dist/wink.css %>
 
     body {
       padding-top: 25px;
@@ -38,11 +38,11 @@
           <table class="container">
             <tr>
               <td>
-                
+
                 <table class="row">
                   <tr>
                     <td class="wrapper last">
-                      
+
                       <table class="twelve columns">
                         <tr>
                           <td>
@@ -88,7 +88,7 @@
               </td>
             </tr>
           </table>
-          
+
           <!-- END EXAMPLE CODE -->
 
         </center>
