--- a/docs/test/index.ejs
+++ b/docs/test/index.ejs
@@ -1,15 +1,3 @@
-<?php
-  
-  include 'vendor/geshi.php';
-  
-  function code_example($code, $lang) {
-    if (strtolower($lang) == 'html') {
-      $lang = 'html5';
-    }
-    geshi_highlight($code, $lang);
-  }
-  
-?>
 <html>
 <head>
   <title>Ink Docs TEST</title>
@@ -22,7 +10,7 @@
   </style>
 </head>
 <body>
-  <?php include 'docs.php' ?>
+  <%- partial("docs") %>
   <script src="http://zurb.com/ink/javascripts/vendor/jquery.js"></script>
   <script src="http://zurb.com/ink/javascripts/foundation/foundation.js"></script>
   <script src="http://zurb.com/ink/javascripts/foundation/foundation.abide.js"></script>
