--- a/templates/base/newsletter.ejs
+++ b/templates/base/newsletter.ejs
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width"/>
 	<style>
-{{> ink }}
+	<%- include ../../dist/wink.css %>
   </style>
   <style>
 
