--- a/templates/boilerplate.html
+++ b/templates/boilerplate.html
@@ -4,12 +4,12 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width"/>
 
-    <link rel="stylesheet" href="ink.css"> <!-- For testing only -->
+    <link rel="stylesheet" href="wink.css"> <!-- For testing only -->
 
     <style type="text/css">
-      
+
       /* Ink styles go here in production */
-      
+
     </style>
     <style type="text/css">
 
