--- a/templates/base/sidebar.ejs
+++ b/templates/base/sidebar.ejs
@@ -145,8 +145,10 @@
 
                       <table class="six columns">
                         <tr>
-                          <td class="panel">
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                          <td>
+														<a href="#" class="panel">
+															Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
+														</a>
                           </td>
 
                           <td class="expander"></td>
