--- a/templates/base/newsletter.ejs
+++ b/templates/base/newsletter.ejs
@@ -233,8 +233,10 @@
                     <td class="wrapper last">
                       <table class="twelve columns">
                         <tr>
-                          <td class="panel">
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                          <td>
+														<a href="#" class="panel">
+															Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
+														</a>
                           </td>
                           <td class="expander"></td>
                         </tr>
