--- a/templates/examples/basic.ejs
+++ b/templates/examples/basic.ejs
@@ -8,58 +8,14 @@
   </style>
   <style>
 
-    table.facebook td {
-      background: #3b5998;
-      border-color: #2d4473;
-    }
-
-    table.facebook:hover td {
-      background: #2d4473 !important;
-    }
-
-    table.twitter td {
-      background: #00acee;
-      border-color: #0087bb;
-    }
-
-    table.twitter:hover td {
-      background: #0087bb !important;
-    }
-
-    table.google-plus td {
-      background-color: #DB4A39;
-      border-color: #CC0000;
-    }
-
-    table.google-plus:hover td {
-      background: #CC0000 !important;
-    }
-
     .template-label {
       color: #ffffff;
       font-weight: bold;
       font-size: 11px;
     }
 
-    .callout .wrapper {
-      padding-bottom: 20px;
-    }
-
-    .callout .panel {
-      background: #ECF8FF;
-      border-color: #b9e5ff;
-    }
-
     .header {
-      background: #999999;
-    }
-
-    .footer .wrapper {
-      background: #ebebeb;
-    }
-
-    .footer h5 {
-      padding-bottom: 10px;
+      background: #555;
     }
 
     table.columns .text-pad {
@@ -153,8 +109,10 @@
 
                       <table class="twelve columns">
                         <tr>
-                          <td class="panel">
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                          <td>
+                            <a href="#" class="panel">
+                              Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
+                            </a>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -170,9 +128,9 @@
 
                       <table class="six columns">
                         <tr>
-                          <td class="left-text-pad">
+                          <td>
 
-                            <h5>Connect With Us:</h5>
+                            <h5>Connect With Us</h5>
 
                             <table class="tiny-button facebook">
                               <tr>
@@ -212,8 +170,8 @@
 
                       <table class="six columns">
                         <tr>
-                          <td class="last right-text-pad">
-                            <h5>Contact Info:</h5>
+                          <td class="last">
+                            <h5>Contact Info</h5>
                             <p>Phone: 408.341.0600</p>
                             <p>Email: <a href="mailto:hseldon@trantor.com">hseldon@trantor.com</a></p>
                           </td>
