--- a/templates/examples/sidebar-hero.ejs
+++ b/templates/examples/sidebar-hero.ejs
@@ -144,8 +144,10 @@
 
                     <table class="twelve columns">
                       <tr>
-                        <td class="panel">
-                          <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <a href="#">Click it! »</a></p>
+                        <td>
+                          <a href="#" class="panel">
+                            Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
+                          </a>
                         </td>
                         <td class="expander"></td>
                       </tr>
@@ -252,8 +254,8 @@
                     <br>
                     <table class="six columns">
                       <tr>
-                        <td class="panel">
-                          <h6 style="margin-bottom:5px;">Connect With Us:</h6>
+                        <td>
+                          <h6 style="margin-bottom:5px;">Connect With Us</h6>
                           <table class="tiny-button facebook">
                               <tr>
                                 <td>
@@ -282,7 +284,7 @@
                               </tr>
                             </table>
                           <br>
-                          <h6 style="margin-bottom:5px;">Contact Info:</h6>
+                          <h6 style="margin-bottom:5px;">Contact Info</h6>
                           <p>Phone: <b>408.341.0600</b></p>
                           <p>Email: <a href="mailto:hseldon@trantor.com">hseldon@trantor.com</a></p>
                         </td>
