Fixes missing bracket

--- a/src/wink.scss
+++ b/src/wink.scss
@@ -498,7 +498,7 @@ table {
 
 /* Helpers */
 
-table, td, h1, h2, h3, h4, h5, h6, p
+table, td, h1, h2, h3, h4, h5, h6, p {
   .center {
     text-align: center;
   }
