--- a/templates/breakout.ejs
+++ b/templates/breakout.ejs
@@ -4,6 +4,13 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width"/>
   <link href="../../src/wink.css" rel="stylesheet" />
+  <% if(environment === "development") { %>
+    <link rel="stylesheet" href="../src/wink.css" /> <!-- For development only -->
+  <% } else { %>
+    <style>
+    <%- include ../dist/wink.css %>
+    </style>
+  <% } %>
   <style>
   @import url(http://fonts.googleapis.com/css?family=Fira+Sans:300,400,700);
   body, table.body, p, td,
