--- a/templates/hero.ejs
+++ b/templates/hero.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <meta name="viewport" content="width=device-width"/>
-  <style>
-  <%- include ../../dist/wink.css %>
-  </style>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<meta name="viewport" content="width=device-width"/>
+	<% if(environment === "development") { %>
+		<link rel="stylesheet" href="../src/wink.css" /> <!-- For development only -->
+	<% } else { %>
+		<style>
+		<%- include ../dist/wink.css %>
+		</style>
+	<% } %>
   <style>
 
     .template-label {
@@ -45,10 +49,11 @@
   </style>
 </head>
 <body>
-  <table class="body">
-    <tr>
-      <td class="center" align="center" valign="top">
+	<table class="body">
+		<tr>
+			<td class="center" align="center" valign="top">
         <center>
+
 
           <table class="row header">
             <tr>
@@ -61,13 +66,15 @@
 
                         <table class="twelve columns">
                           <tr>
+
                             <td class="six sub-columns">
                               <img src="http://placehold.it/200x50">
                             </td>
-                            <td class="six sub-columns last" style="text-align:right; vertical-align:middle;">
-                              <span class="template-label">BASIC</span>
+                            <td class="six sub-columns last" align="right" style="text-align:right; vertical-align:middle;">
+                              <span class="template-label">HERO</span>
                             </td>
                             <td class="expander"></td>
+
                           </tr>
                         </table>
 
@@ -79,11 +86,13 @@
               </td>
             </tr>
           </table>
+          <br>
 
           <table class="container">
             <tr>
               <td>
 
+                <!-- content start -->
                 <table class="row">
                   <tr>
                     <td class="wrapper last">
@@ -91,9 +100,11 @@
                       <table class="twelve columns">
                         <tr>
                           <td>
-                            <h1>Hi, Susan Calvin</h1>
-                            <p class="lead">Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae.</p>
-                            <p>Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. consequat vel lacus. Sed iaculis pulvinar ligula, ornare fringilla ante viverra et. In hac habitasse platea dictumst. Donec vel orci mi, eu congue justo. Integer eget odio est, eget malesuada lorem. Aenean sed tellus dui, vitae viverra risus. Nullam massa sapien, pulvinar eleifend fringilla id, convallis eget nisi. Mauris a sagittis dui. Pellentesque non lacinia mi. Fusce sit amet libero sit amet erat venenatis sollicitudin vitae vel eros. Cras nunc sapien, interdum sit amet porttitor ut, congue quis urna.</p>
+
+                            <h1>Hi, Elijah Baily</h1>
+                						<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.</p>
+                						<img width="580" height="300" src="http://placehold.it/580x300">
+
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -110,9 +121,9 @@
                       <table class="twelve columns">
                         <tr>
                           <td>
-                            <a href="#" class="panel">
-                              Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
-                            </a>
+														<a href="#" class="panel">
+                            	Phasellus dictum sapien a neque luctus cursus. Pellentesque sem dolor, fringilla et pharetra vitae. <span class="a-faux">Click it! →</span>
+														</a>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -121,6 +132,53 @@
                     </td>
                   </tr>
                 </table>
+
+                <table class="row">
+                  <tr>
+                    <td class="wrapper last">
+
+                      <table class="twelve columns">
+                        <tr>
+                          <td>
+
+                            <h3>Title Ipsum <small>This is a note.</small></h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                  </tr>
+                </table>
+
+
+                <table class="row">
+                  <tr>
+                    <td class="wrapper last">
+
+                      <table class="three columns">
+                        <tr>
+                          <td>
+
+                            <table class="button">
+                              <tr>
+                                <td>
+                                  <a href="#">Click Me!</a>
+                                </td>
+                              </tr>
+                            </table>
+
+                          </td>
+                          <td class="expander"></td>
+                        </tr>
+                      </table>
+
+                    </td>
+                  </tr>
+                </table>
+
 
                 <table class="row footer">
                   <tr>
@@ -203,14 +261,14 @@
                   </tr>
                 </table>
 
-              <!-- container end below -->
+                <!-- container end below -->
               </td>
             </tr>
           </table>
 
         </center>
-      </td>
-    </tr>
-  </table>
+			</td>
+		</tr>
+	</table>
 </body>
 </html>
